Fix wrap and padding of carousel

--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,8 @@ li{
     display: flex;
     justify-content: center;
     gap: 8px;
-    margin-bottom: 80px;
+    padding: 80px;
+    flex-wrap: wrap;
 }
 
 .thumbnails{
